kubernetes/ingress/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /movies-api(/|$)(.*)
            backend:
              service:
                name: movies-api-service
                port:
                  number: 8080

#can be used instead of clusterip
