kubernetes/ingress/ingress-ui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ui-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: movies-ui-service
                port:
                  number: 3000
